[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gui/CreditButton_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/CreditButton_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/CreditButton_pressed.png" type="Texture" id=3]
[ext_resource path="res://scenes/gui/StartScreenBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gui/StartScreenButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gui/OptionsScreen.gd" type="Script" id=6]

[node name="OptionsScreen" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="RichTextLabel" parent="NinePatchRect" index="1"]
bbcode_text = "

[center][wave]Options[/wave]"
text = "

Options"

[node name="VBoxContainer" parent="NinePatchRect/CenterContainer" index="1"]
margin_left = 150.0
margin_top = 123.0
margin_right = 350.0
margin_bottom = 377.0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/CenterContainer/VBoxContainer" index="0"]
margin_right = 200.0
margin_bottom = 134.0
custom_constants/separation = 30
alignment = 1

[node name="MusicContainer" type="VSplitContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
margin_left = 5.0
margin_right = 100.0
margin_bottom = 134.0
custom_constants/separation = 10
split_offset = 10
collapsed = true
dragger_visibility = 1

[node name="MusicSlider" type="VSlider" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/MusicContainer" index="0"]
margin_left = 39.0
margin_right = 55.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 100 )
size_flags_horizontal = 6
min_value = -50.0
max_value = 25.0

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/MusicContainer" index="1"]
margin_top = 110.0
margin_right = 95.0
margin_bottom = 134.0
custom_constants/separation = 10
split_offset = 10
collapsed = true
dragger_visibility = 1

[node name="Label" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/MusicContainer/HSplitContainer" index="0"]
margin_right = 72.0
margin_bottom = 24.0
text = "Music"

[node name="MusicVolume" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/MusicContainer/HSplitContainer" index="1"]
margin_left = 82.0
margin_right = 95.0
margin_bottom = 24.0
text = "0"

[node name="SfxContainer" type="VSplitContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 130.0
margin_right = 195.0
margin_bottom = 134.0
custom_constants/separation = 10
split_offset = 10
collapsed = true
dragger_visibility = 1

[node name="SfxSlider" type="VSlider" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/SfxContainer" index="0"]
margin_left = 24.0
margin_right = 40.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 100 )
size_flags_horizontal = 6

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/SfxContainer" index="1"]
margin_top = 110.0
margin_right = 65.0
margin_bottom = 134.0
custom_constants/separation = 10
split_offset = 10
collapsed = true
dragger_visibility = 1

[node name="Label" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/SfxContainer/HSplitContainer" index="0"]
margin_right = 42.0
margin_bottom = 24.0
text = "Sfx"

[node name="SfxVolume" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/SfxContainer/HSplitContainer" index="1"]
margin_left = 52.0
margin_right = 65.0
margin_bottom = 24.0
text = "0"

[node name="CreditsButton" parent="NinePatchRect/CenterContainer/VBoxContainer" index="1" instance=ExtResource( 5 )]
margin_top = 144.0
margin_bottom = 254.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
ToIndex = 2
[connection signal="value_changed" from="NinePatchRect/CenterContainer/VBoxContainer/HBoxContainer/MusicContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
